# ssai-cnn

./: .gitignore  README.md  results.md
docker/: Dockerfile  docker_entrypoint.sh  just
functions/: cis.py  test_cis.py
models/: FCN_32s.py  MnihCNN_cis.py  MnihCNN_multi.py  MnihCNN_rcis.py  MnihCNN_single.py  VGG_cis.py  VGG_multi.py  VGG_single.py
scripts/: calc_sigma.py  calc_time.py  choose_images.py  compare.py  conv_vis.py  create_dataset.py  create_dataset2.py  dataset_size.py  draw_dataset_size_eval.py  draw_loss.py  eval_urban.py  evaluate.py  evaluate_single.py  integrate.py  invert.py  invert_diff.py  ligten_logs.py  loss.py  predict.py  predict_offset.py  tile_reshape.py  train.py  visualize.py
scripts/tests/: test_calc_relax_pr.py  test_dataset.py  test_split_to_patches.py  test_transform.py
scripts/utils/: build.sh  calc_relax_pr.pyx  create_args.py  draw_loss.py  setup.py  split_to_patches.pyx  transform.py
scripts/utils/evaluation/: CMakeLists.txt  build.sh  calc_relax_pr.cpp
scripts/utils/patches/: CMakeLists.txt  test.py
scripts/utils/transform/: CMakeLists.txt  transform.cpp  transformer.py
scripts/utils/transform/transform/: CMakeLists.txt  build.sh  transform.py
shells/: build_opencv.sh  create_dataset.sh  downloads.sh  evaluate.sh  evaluate_urban.sh  invert.sh  predict.sh  resume.sh  setup.sh  test_calc_relax_pr.sh  test_dataset.sh  test_divide_to_patches.sh  test_transform.sh  train_batch.sh  visualize.sh
tests/: test_calc_relax_pr.py  test_divide_to_patches.py  test_transform.py
utils/: CMakeLists.txt  build.sh  create_args.py  test_transform.py  transform.py  transformer.py
utils/src/: calc_relax_pr.cpp  devide_to_patches.cpp  transform.cpp
